Correct logic added in Main.js

--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,7 @@
 
      <p> What is the capital of US?</p>
      <input type="radio" id="mc" name ="question2" value = "New_York">New_York<br/>
-     <input type="radio" id="mc" name ="question2" value = "Lass_Vegas">Lass_Vegas<br/>
+     <input type="radio" id="mc" name ="question2" value = "Lass_Vegas">Lass_Vegas<br/><br>
 
      <input type="button" value ="I'm finished"
      onclick = "check();">
@@ -34,7 +34,7 @@
 
 	<div id = "after_submit">
 		
-    <p id="number_correct"> You finished</p>
+    <p id="number_correct"></p>
 
 	</div>
 
