--- a/Index.html
+++ b/Index.html
@@ -5,8 +5,7 @@
 		 Your Quiz
 	</title>
 	<link  href="Style.css" rel = "stylesheet">
-	<link href="http: // fonts/googleapis.com/css?family=Lato"
-	 rel = "stylesheet">
+	
 	 <script src="Main.js"></script>	 	
 	 
 </head>
@@ -15,15 +14,16 @@
 
 	<form id="quiz" name="quiz">
 
-     <p> What is the capital of india</p>
-      <input id="textbox" type="text" name ="question2"><br/>
+     <p> What is the capital of Japan</p>
+      <input id="textbox" type="text" name ="question1"><br/>
 
+      <p> What is the capital of india</p><br/>
      <input type="radio" id="mc" name ="question2" value = "Delhi">Delhi<br/>
      <input type="radio" id="mc" name ="question2" value = "Mumbai">Mumbai<br/>
 
      <p> What is the capital of US?</p>
-     <input type="radio" id="mc" name ="question2" value = "New_York">New_York<br/>
-     <input type="radio" id="mc" name ="question2" value = "Lass_Vegas">Lass_Vegas<br/><br>
+     <input type="radio" id="mc" name ="question3" value = "New_York">New_York<br/>
+     <input type="radio" id="mc" name ="question3" value = "Lass_Vegas">Lass_Vegas<br/><br>
 
      <input type="button" value ="I'm finished"
      onclick = "check();">
@@ -34,7 +34,7 @@
 
 	<div id = "after_submit">
 		
-    <p id="number_correct"></p>
+    <p id="number_correct">hjgf</p>
 
 	</div>
 
